fixing overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
 	max-width: 100vw;
 	background-color: #fafafa;
 	font-family: "Roboto", sans-serif;
+	overflow-x: hidden;
 }
 main {
 	min-height: calc(100vh - 60px - 60px);
